# mcp_bridge

./: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  README_HTTP.md  docker-compose.yml  errors.md  pyproject.toml  requirements.txt  streamable_http_adapter.py  test_http_server.py
.claude/: settings.local.json
src/markitdown_mcp_server/: __init__.py  server.py
