[project]
name = "markitdown-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "korigamik-hypr", email = "korigamik@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["markitdown>=0.1", "mcp", "aiohttp"]

[project.scripts]
markitdown = "markitdown_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "off"
reportOptionalMemberAccess = false
